2013-09-21  Paul Smith  <psmith@gnu.org>

	Stderr generated from shell functions in recipes should be synced.

	* job.h (FD_STDIN, FD_STDOUT, FD_STDERR): Create new macros to
	avoid magic numbers.
	(child_execute_job): Take a FD for stderr.
	* job.c (child_execute_job): Handle STDERR FD's in addition to
	stdin and stdout.
	(start_job_command): Call child_execute_job() with the new STDERR
	parameter.  Instead of performing the dup() here, send it to
	child_execute_job() where it's already being done.
	* function.c (func_shell_base): Pass the OUTPUT_CONTEXT stderr to
	child_execute_job() if it's set, otherwise FD_STDERR.
	* main.c (main): Pass FD_STDERR to child_execute_job().

2013-09-19  Paul Smith  <psmith@gnu.org>

	* main.c (main): Set MAKE_RESTARTS to negative before re-exec if
	we've already generated an "Entering" message.  If we are started
	and notice that MAKE_RESTARTS is negative, assume we already wrote
	"Entering" and don't write it again.

2013-09-18  Paul Smith  <psmith@gnu.org>

	* main.c (main): Set starting_directory before we write any
	errors.  Fixes Savannah bug #40043.

2013-09-16  Eli Zaretskii  <eliz@gnu.org>

	* output.c [WINDOWS32]: Include windows.h and sub_proc.h, to avoid
	compiler warnings for CLOSE_ON_EXEC.

2013-09-16  Paul Smith  <psmith@gnu.org>

	* configure.ac: Update version to 3.99.91.
	* NEWS: Ditto.

2013-09-15  Paul Smith  <psmith@gnu.org>

	* doc/make.texi (Error Messages): Add a bit more info to the
	section on static pattern errors, since they're common.
	Fixes Savannah bug #31326.

	* read.c (eval_makefile): If the file open fails with an
	unrecoverable error, stop now rather than trying to make it.
	Fixes Savannah bug #27374.

	* main.c (main): Perform the validation of the jobserver FDs
	early, before we read makefiles, to ensure that something hasn't
	opened and used those FDs for some other reason.
	Fixes Savannah bug #39934.

	* main.c (main): Don't set MAKEFLAGS in the environment when we