@@ -550,6 +550,11 @@ int clock_skew_detected;
 #endif
 unsigned short stopchar_map[UCHAR_MAX + 1] = {0};
 
+/* If output-sync is enabled we'll collect all the output generated due to
+   options, while reading makefiles, etc.  */
+
+struct output make_sync;
+
 
 /* Mask of signals that are being caught with fatal_error_signal.  */
 
@@ -1041,6 +1046,7 @@ main (int argc, char **argv, char **envp)
   struct dep *read_files;
   PATH_VAR (current_directory);
   unsigned int restarts = 0;
+  unsigned int syncing = 0;
 #ifdef WINDOWS32
   char *unix_path = NULL;
   char *windows32_path = NULL;
@@ -1051,6 +1057,8 @@ main (int argc, char **argv, char **envp)
   unixy_shell = 0;
   no_default_sh_exe = 1;
 #endif
+
+  output_init (&make_sync);
 
   initialize_stopchar_map();
 
@@ -1390,6 +1398,13 @@ main (int argc, char **argv, char **envp)
   decode_env_switches (STRING_SIZE_TUPLE ("GNUMAKEFLAGS"));
   decode_env_switches (STRING_SIZE_TUPLE ("MAKEFLAGS"));
 
+  /* In output sync mode we need to sync any output generated by reading the
+     makefiles, such as in $(info ...) or stderr from $(shell ...) etc.  */
+
+  syncing = make_sync.syncout = (output_sync == OUTPUT_SYNC_LINE
+                                 || output_sync == OUTPUT_SYNC_TARGET);
+  OUTPUT_SET (&make_sync);
+
 #if 0
   /* People write things like:
         MFLAGS="CC=gcc -pipe" "CFLAGS=-g"
@@ -1398,6 +1413,16 @@ main (int argc, char **argv, char **envp)
 #endif
 
   decode_switches (argc, argv, 0);
+
+  /* Reset in case the switches changed our minds.  */
+  syncing = (output_sync == OUTPUT_SYNC_LINE
+             || output_sync == OUTPUT_SYNC_TARGET);
+
+  if (make_sync.syncout && ! syncing)
+    output_close (&make_sync);
+
+  make_sync.syncout = syncing;
+  OUTPUT_SET (&make_sync);
 
   /* Figure out the level of recursion.  */
   {
@@ -1907,6 +1932,16 @@ main (int argc, char **argv, char **envp)
     decode_env_switches (STRING_SIZE_TUPLE ("MFLAGS"));
 #endif
 
+    /* Reset in case the switches changed our minds.  */
+    syncing = (output_sync == OUTPUT_SYNC_LINE
+               || output_sync == OUTPUT_SYNC_TARGET);
+
+    if (make_sync.syncout && ! syncing)
+      output_close (&make_sync);
+
+    make_sync.syncout = syncing;
+    OUTPUT_SET (&make_sync);
+
     /* If we've disabled builtin rules, get rid of them.  */
     if (no_builtin_rules_flag && ! old_builtin_rules_flag)
       {
@@ -2076,6 +2111,11 @@ main (int argc, char **argv, char **envp)
 
   /* Initialize the remote job module.  */
   remote_setup ();
+
+  /* Dump any output we've collected.  */
+
+  OUTPUT_UNSET ();
+  output_close (&make_sync);
 
   if (read_files != 0)
     {
@@ -3357,6 +3397,13 @@ die (int status)
         verify_file_data_base ();
 
       clean_jobserver (status);
+
+      if (output_context)
+        {
+          assert (output_context == &make_sync);
+          OUTPUT_UNSET ();
+          output_close (&make_sync);
+        }
 
       output_close (NULL);
 
